added instructions for reproducing the timezone problem